<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/color_cardview_background"
    app:cardElevation="@dimen/dimen_two_dip"
    app:cardCornerRadius="@dimen/dimen_two_dip"
    app:cardPreventCornerOverlap="true">
    <RelativeLayout
        android:id="@+id/short_bookitem_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.capsule.apps.rxbookman.widgets.AspectRatioView
            android:id="@+id/short_book_image_layout"
            android:layout_width="@dimen/dimen_short_book_listitem_image_width"
            android:layout_height="wrap_content"
            app:aspectRatio="0.75">
            <ImageView
                android:id="@+id/short_book_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/books_cover"
                android:layout_marginTop="@dimen/dimen_short_book_image_margin_top"
                android:contentDescription="@string/short_book_image_description"
                android:layout_alignParentBottom="true"/>
            <ImageView
                android:id="@+id/book_bookmark"
                android:layout_width="@dimen/dimen_bookmark_listitem_size"
                android:layout_height="@dimen/dimen_bookmark_listitem_height"
                android:src="@drawable/ic_bookmark"
                android:layout_marginEnd="@dimen/dimen_small_padding"
                android:layout_alignParentEnd="true"
                android:scaleType="centerCrop"
                android:layout_alignTop="@id/short_book_layout"
                android:contentDescription="@null"/>
        </com.capsule.apps.rxbookman.widgets.AspectRatioView>

        <ImageView
            android:id="@+id/short_book_menu"
            android:layout_width="@dimen/dimen_thirdty_dip"
            android:layout_height="@dimen/dimen_thirdty_dip"
            android:layout_marginEnd="@dimen/dimen_negative_half_dip"
            android:layout_alignParentEnd="true"
            android:clickable="true"
            android:background="?selectableItemBackgroundBorderless"
            android:scaleType="centerInside"
            android:contentDescription="@null"
            android:src="@drawable/ic_options"/>
        <com.capsule.apps.rxbookman.widgets.EllipsizedTextView
            android:id="@+id/short_book_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/short_book_image_layout"
            android:paddingEnd="@dimen/dimen_two_dip"
            android:paddingStart="@dimen/dimen_two_dip"
            android:layout_marginEnd="@dimen/dimen_short_book_title_margin_end"
            android:layout_marginTop="@dimen/dimen_short_book_title_margin_top"
            android:layout_marginStart="@dimen/dimen_short_book_list_title_margin_start"
            android:maxLines="1"
            android:textSize="@dimen/dimen_short_book_title_size"
            android:textColor="@color/color_short_book_title_color"
            android:textStyle="bold"
            android:text="@string/short_book_title_sample"/>
        <com.capsule.apps.rxbookman.widgets.EllipsizedTextView
            android:id="@+id/short_book_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/dimen_two_dip"
            android:paddingStart="@dimen/dimen_two_dip"
            android:layout_toEndOf="@id/short_book_image_layout"
            android:layout_below="@id/short_book_title"
            android:layout_marginTop="@dimen/dimen_short_book_list_subtitle_margin_top"
            android:layout_marginStart="@dimen/dimen_short_book_list_title_margin_start"
            android:maxLines="1"
            android:textSize="@dimen/dimen_short_book_list_subtitle_size"
            android:textColor="@color/color_short_book_subtitle_color"
            android:text="@string/short_book_subtitle_sample"/>
        <com.capsule.apps.rxbookman.widgets.EllipsizedTextView
            android:id="@+id/short_book_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/dimen_two_dip"
            android:paddingStart="@dimen/dimen_two_dip"
            android:layout_below="@id/short_book_subtitle"
            android:layout_toEndOf="@id/short_book_image_layout"
            android:maxLines="4"
            android:lines="4"
            android:layout_marginTop="@dimen/dimen_short_book_list_description_margin_top"
            android:layout_marginStart="@dimen/dimen_short_book_list_title_margin_start"
            android:textSize="@dimen/dimen_short_book_list_description_size"
            android:textColor="@color/color_short_book_description_color"
            android:text="@string/short_book_description_sample"/>
    </RelativeLayout>
</android.support.v7.widget.CardView>