<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/short_book_item"
    android:clickable="true"
    android:background="?selectableItemBackground"
    app:cardBackgroundColor="@color/color_cardview_background"
    app:cardPreventCornerOverlap="true"
    app:cardElevation="@dimen/dimen_two_dip"
    app:cardCornerRadius="@dimen/dimen_two_dip">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/short_book_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#11ffffff">
            <com.capsule.apps.rxbookman.widgets.AspectRatioView
                android:id="@+id/short_book_image_layout"
                android:layout_width="@dimen/dimen_short_book_image_width"
                android:layout_height="wrap_content"
                app:aspectRatio="0.75">
                <ImageView
                    android:id="@+id/short_book_image"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/dimen_short_book_image_margin_top"
                    android:layout_height="match_parent"
                    android:src="@drawable/books_cover"
                    android:contentDescription="@string/short_book_image_description"/>
            </com.capsule.apps.rxbookman.widgets.AspectRatioView>

            <ImageView
                android:id="@+id/options_menu"
                android:layout_width="@dimen/dimen_15dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:paddingTop="@dimen/dimen_small_padding"
                android:paddingBottom="@dimen/dimen_small_padding"
                android:clickable="true"
                android:contentDescription="@null"
                android:background="?selectableItemBackgroundBorderless"
                android:layout_marginEnd="@dimen/dimen_small_padding"
                android:layout_marginTop="@dimen/dimen_short_book_title_margin_top"
                android:layout_below="@id/short_book_image_layout"
                android:src="@drawable/ic_options"/>
            <com.capsule.apps.rxbookman.widgets.EllipsizedTextView
                android:id="@+id/short_book_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen_20dp"
                android:paddingStart="@dimen/dimen_small_padding"
                android:paddingEnd="@dimen/dimen_small_padding"
                android:layout_marginTop="@dimen/dimen_short_book_title_margin_top"
                android:layout_below="@id/short_book_image_layout"
                android:maxLines="2"
                android:textSize="@dimen/dimen_short_book_title_size"
                android:textColor="@color/color_short_book_title_color"
                android:text="@string/short_book_title_sample"
                app:fontVariation="normal"
                app:fixWidowWords="true"/>
            <com.capsule.apps.rxbookman.widgets.EllipsizedTextView
                android:id="@+id/short_book_isbn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/short_book_title"
                android:layout_marginBottom="@dimen/dimen_small_padding"
                android:paddingStart="@dimen/dimen_small_padding"
                android:paddingEnd="@dimen/dimen_small_padding"
                android:layout_marginTop="@dimen/dimen_short_book_isbn_margin_top"
                android:maxLines="1"
                android:textSize="@dimen/dimen_short_book_isbn_size"
                android:textColor="@color/color_short_book_isbn_color"
                android:text="@string/short_book_isbn_sample"
                app:fontVariation="normal"
                app:fixWidowWords="true"/>
        </RelativeLayout>
        <ImageView
            android:id="@+id/book_bookmark"
            android:layout_width="@dimen/dimen_bookmark_size"
            android:layout_height="@dimen/dimen_bookmark_height"
            android:src="@drawable/ic_bookmark"
            android:layout_marginEnd="@dimen/dimen_small_padding"
            android:layout_alignParentEnd="true"
            android:scaleType="centerCrop"
            android:layout_alignTop="@id/short_book_layout"
            android:contentDescription="@null"/>

    </RelativeLayout>
</android.support.v7.widget.CardView>